--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 <div class="h-100 d-flex flex-column justify-content-center bg-primary p-5">
                     <div class="d-flex text-white mb-5">
                         <div class="d-flex flex-shrink-0 align-items-center justify-content-center bg-white text-primary rounded-circle mx-auto mb-4" style="width: 60px; height: 60px;">
-                            <i class="fa fa-user-tie fs-4"></i>
+                            <i class="fa fa-heartbeat fs-4"></i>
                         </div>
                         <div class="ps-4">
                             <h3>Health Care Assistance</h3>
@@ -116,7 +116,7 @@
                     </div>
                     <div class="d-flex text-white mb-5">
                         <div class="d-flex flex-shrink-0 align-items-center justify-content-center bg-white text-primary rounded-circle mx-auto mb-4" style="width: 60px; height: 60px;">
-                            <i class="fa fa-chart-line fs-4"></i>
+                            <i class="fa fa-utensils fs-4"></i>
                         </div>
                         <div class="ps-4">
                             <h3>Kitchen Assistance</h3>
@@ -125,7 +125,7 @@
                     </div>
                     <div class="d-flex text-white">
                         <div class="d-flex flex-shrink-0 align-items-center justify-content-center bg-white text-primary rounded-circle mx-auto mb-4" style="width: 60px; height: 60px;">
-                            <i class="fa fa-balance-scale fs-4"></i>
+                            <i class="fa fa-home fs-4"></i>
                         </div>
                         <div class="ps-4">
                             <h3>Domestic Assistance</h3>
@@ -149,7 +149,7 @@
             <div class="col-lg-4 col-md-6">
                 <div class="service-item bg-secondary text-center px-5">
                     <div class="d-flex align-items-center justify-content-center bg-primary text-white rounded-circle mx-auto mb-4" style="width: 90px; height: 90px;">
-                        <i class="fa fa-user-tie fa-2x"></i>
+                        <i class="fa fa-heartbeat fa-2x"></i>
                     </div>
                     <h3 class="mb-3">Health Care Assistance</h3>
                     <p class="mb-0">Focused on your well-being, we provide support for daily health routines, medication reminders, and compassionate care to ensure a stress-free experience.</p>
@@ -158,7 +158,7 @@
             <div class="col-lg-4 col-md-6">
                 <div class="service-item bg-secondary text-center px-5">
                     <div class="d-flex align-items-center justify-content-center bg-primary text-white rounded-circle mx-auto mb-4" style="width: 90px; height: 90px;">
-                        <i class="fa fa-chart-pie fa-2x"></i>
+                        <i class="fa fa-utensils fa-2x"></i>
                     </div>
                     <h3 class="mb-3">Kitchen Assistance</h3>
                     <p class="mb-0">Streamline your kitchen tasks with help in meal planning, cooking, grocery organization, and maintaining a clean, efficient space.</p>
@@ -167,7 +167,7 @@
             <div class="col-lg-4 col-md-6">
                 <div class="service-item bg-secondary text-center px-5">
                     <div class="d-flex align-items-center justify-content-center bg-primary text-white rounded-circle mx-auto mb-4" style="width: 90px; height: 90px;">
-                        <i class="fa fa-chart-line fa-2x"></i>
+                        <i class="fa fa-home fa-2x"></i>
                     </div>
                     <h3 class="mb-3">Domestic Assistance</h3>
                     <p class="mb-0">Effortlessly manage your home with services like cleaning, laundry, and organization, creating a tidy and stress-free living space.</p>
@@ -200,9 +200,9 @@
                         <div class="col-6">
                             <div class="form-floating">
                                 <select class="form-select" id="floatingSelect" aria-label="Financial Consultancy">
-                                    <option selected>Financial Consultancy</option>
-                                    <option value="1">Strategy Consultancy</option>
-                                    <option value="2">Tax Consultancy</option>
+                                    <option selected>Healthcare Assistance</option>
+                                    <option value="1">Kitchen Assistance</option>
+                                    <option value="2">Home Assistance</option>
                                 </select>
                                 <label for="floatingSelect">Select A Service</label>
                             </div>
